# simple-shell-mac

./: README.md  convert_srts.sh  disk_no_limit_speed.sh  find-diff.sh  flush_dns.sh  pyproject.toml  update_all_module.sh
python/: README.md  requirements-base.txt  requirements-dev.txt
python/excel to mysql/: excel2mysql.py  excel2mysql_bak.py  my.conf
python/excel to mysql/xls/: README.md  stock_2017_05_10.xls  stock_2017_05_11.xls  stock_2017_05_12.xls
python/files/: combined_images.py  douban.py  douban_by_list.py  douban_common.py  join-img.py  join-pdf.py  pinjie-img 2.py  pinjie-img.py  pinjie-pdf 2.py  pinjie-pdf-n.py
python/get stock info/: Main.py
python/get stock info/V0.0/: Main.py  basefunc.py  gsi.conf  histort_code.py  importfunc.py  result  strategy.py  test.py
python/get stock info/V0.1/: Main.py  getInfo.py  hsc01  initdb.py  m3.conf  mysqlConnector.py
python/get stock info/V0.1/save/: change.sh  tableall  tabletop
python/get stock info/V0.2/: Main.py  basefunc.py  importfunc.py  log.profit  strategy.py
python/get stock info/V0.3/: Main.py
python/get stock info/V0.3/conf/: gsi.conf
python/get stock info/V0.3/data/: strategyRB.dat.20171009
python/get stock info/V0.4/: Main.py
shell/: README.md
shell/imple-shell/: auto_restart_wifi.sh  install_other_app.sh  mysql-install.sh  show_hide_file.sh
shell/simple-shell/: auto_restart_mac_wifi.sh  convert_srts.sh  disk_no_limit_speed.sh  find-diff.sh  flush_dns.sh  install_other_app.sh  mysql-install.sh  show_hide_file.sh  update_all_module.sh
shell/youtube-download/: youtube-dl
(+4 files in other folders)
