[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-shell-mac"
version = "0.1.0"
description = "Collection of shell and Python utility scripts for daily automation"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "shen445122" }
]
dependencies = []

[project.optional-dependencies]
python-scripts = [
  "PyMuPDF>=1.24",
  "PyPDF2>=3.0",
  "requests>=2.31",
  "beautifulsoup4>=4.12",
  "lxml>=5.0",
  "mysql-connector-python>=8.0",
  "xlrd>=2.0",
]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]

[tool.ruff]
line-length = 100
target-version = "py39"
